# ansible-cafeteria

./: .ansible-lint  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .python-version  README.md  ansible.cfg  commands.txt  install-k8s.sh  intel13h-grub.md  inventory.ini  inventory.test.ini  playbook.yml  pyproject.toml  requirements.txt  visudo.sh
.github/workflows/: ansible.yaml  main.yaml  runner-test.yaml  vault.yaml  workstation.yaml
group_vars/: all.yml  cafes.yml  cafeteria.yml  catuai.yml  local.yml
host_vars/: castillo.yml  catimore.yml  catuai.yml  caturra.yml  geisha.yml  localhost.yml  pneuma.yml
k8s/deployments/home-assistant/: kustomization.yaml
playbooks/: main.yml  server.yml  test.yml  vault.yml  vault_config.yml  worker.yml  workstation.yml
requirements/: main.txt
roles/bluetooth/tasks/: main.yml
roles/bond/defaults/: main.yml
roles/bond/tasks/: main.yaml
roles/bond/templates/: bond.network.j2
roles/dev_tools/defaults/: main.yml
roles/dev_tools/tasks/: chrome.yml  direnv.yml  gh.yml  main.yml  nvm.yml  terraform.yml  uv.yml  vscode.yml
roles/gh/tasks/: main.yml
roles/intel-graphics/tasks/: main.yaml
roles/intel_graphics/tasks/: main.yaml
roles/k8s/defaults/: main.yml
roles/k8s/deployments/: home-assistant.yaml  kubernetes-dashboard.yaml  n8n-postgresql.yaml  n8n.yaml  test.yaml
roles/k8s/tasks/: apt.yml  configure.yml  deploy.yml  deployments.yml  init.yml  install.yml  kubeconfig.yml  main.yml  swap.yml  sysctl.yml  uninstall.yml
roles/k8s/templates/: kubeadm-init.yaml.j2  mprobe.conf.j2
roles/netplan/defaults/: main.yml
roles/netplan/tasks/: main.yml
roles/nfs/tasks/: main.yml  (+3 more)
scripts/: vault-auth.sh
tasks/: kubeadm.yml  kubejoin.yml  prepare.yml
vault/policies/: pihole-policy.hcl
(+20 files in other folders)
