[project]
name = "ansible-cafeteria"
version = "0.1.0"
description = "Ansible automation for homelab infrastructure"
requires-python = ">=3.11"

[tool.uv]
default-groups = ["base"]

[dependency-groups]
base = [
  "ansible==12.2.0",
]

kubernetes = [
  {include-group = "base"},
  "kubernetes==33.1.0",
  "openshift==0.13.2",
]

vault = [
  {include-group = "base"},
  # Placeholder: Vault-related Python dependencies
  # e.g. "hvac==X.Y.Z"
]

workstation = [
  {include-group = "base"},
  # Placeholder: Vault-related Python dependencies
  # e.g. "hvac==X.Y.Z"
]
